Updated to use List.of() per Sean's comment.